# platform.build.bazel

./: PREUPLOAD.cfg  base.bazelrc  bazel.WORKSPACE  common.bazelrc  tool.bazelrc  toplevel.MODULE.bazel  toplevel.WORKSPACE  toplevel.bazelrc
development/tools/preupload/: buildifier.py
flags/: common.bzl
perfetto_overrides/: WORKSPACE  perfetto_cfg.bzl
rules/: env.bzl  repository.bzl  repository_utils.bzl  rust_proc_macro.bzl  selective_local_repository.bzl  simple_toolchain.bzl  toolchains.json  windows_resources.bzl
rules/java/: BUILD
rules/java/stub_local_jdk/: BUILD.bazel
rules/tradefed/: tradefed.bzl
scripts/incremental_build/: incremental_build.sh
toolchains/: tool_versions.json
toolchains/cc/: BUILD.bazel  actions.bzl  bootstrap.bzl  cc_toolchain_config.bzl  cc_toolchain_import.bzl  clang.BUILD  features.bzl  features_common.bzl  gcc_lib.BUILD  repository_rules.bzl  rules.bzl  utils.bzl  wrapper.cc
toolchains/cc/example/lib/: BUILD  hello-time.cc
toolchains/cc/example/main/: BUILD  hello-greet.cc  hello-world.cc
toolchains/cc/linux_clang/: BUILD.bazel  clang.BUILD  features.bzl  gcc_lib.BUILD
toolchains/cc/mac_clang/: BUILD.bazel  clang.BUILD  dsym.bzl  features.bzl  sdk.BUILD  xcode.BUILD
toolchains/cc/objc_example/: BUILD  hello.m
toolchains/cc/objc_example/defs/: defs.h
toolchains/cc/windows_clang/: BUILD.bazel  clang.BUILD  features.bzl  mingw64.BUILD  sdk.BUILD.tpl  sdk_tools.bzl  vctools.BUILD
toolchains/python/: BUILD.bazel  prebuilts.BUILD
toolchains/rust/: BUILD.bazel  feature-rules_rust_link_cc.patch  fix-generated-file-with-sibling-layout.patch  linux.BUILD  mac.BUILD  no-debuginfo-with-cc-common-link.patch  pdb-from-cc_common-link.patch  rules_rust_sibling_layout.patch  windows.BUILD
utils/: bazel_workspace.cmd  bazel_workspace.py  cmake.cquery.bzl  public_headers.cquery.bzl
