load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load(
    "@//build/bazel/toolchains/cc:cc_toolchain_import.bzl",
    "cc_toolchain_dynamic_runtime",
    "cc_toolchain_static_runtime",
)

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "empty",
    srcs = [],
)

cc_toolchain_config(
    name = "linux_clang_x64_config",
    cc_tools = "@clang//:linux_x64",
    compile_flags = [
        "-m64",
        "-no-canonical-prefixes",
    ],
    identifier = "linux_clang_x64",
    link_flags = [
        "-fuse-ld=lld",
        "-Wno-unused-command-line-argument",
    ],
    toolchain_imports = [
        "@clang//:linux_x64_libcxx",
        "@gcc_lib//:start_libs",
    ],
)

cc_toolchain_dynamic_runtime(
    name = "linux_clang_x64_dynamic_runtime",
    libs = [
        "@clang//:linux_x64_libcxx",
        "@gcc_lib//:start_libs",
    ],
)

cc_toolchain_static_runtime(
    name = "linux_clang_x64_static_runtime",
    libs = [
        "@clang//:linux_x64_libcxx",
        "@gcc_lib//:start_libs",
    ],
)

cc_toolchain(
    name = "linux_clang_x64",
    all_files = ":linux_clang_x64_config",
    ar_files = "@clang//:linux_x64",
    as_files = "@clang//:linux_x64",
    compiler_files = ":linux_clang_x64_config",
    dwp_files = ":empty",
    dynamic_runtime_lib = ":linux_clang_x64_dynamic_runtime",
    linker_files = ":linux_clang_x64_config",
    objcopy_files = ":empty",
    static_runtime_lib = ":linux_clang_x64_static_runtime",
    strip_files = "@clang//:linux_x64",
    supports_param_files = 1,
    toolchain_config = ":linux_clang_x64_config",
)

toolchain(
    name = "linux_clang_x64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_clang_x64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
