load("@bazel_skylib//rules:common_settings.bzl", "bool_setting")
load(":bootstrap.bzl", "cc_bootstrap_binary")

filegroup(
    name = "empty",
    srcs = [],
    visibility = ["//build/bazel/toolchains/cc:__subpackages__"],
)

bool_setting(
    name = "bootstrap",
    build_setting_default = False,
)

config_setting(
    name = "is_bootstrap",
    flag_values = {
        ":bootstrap": "true",
    },
    visibility = [
        "//build/bazel/toolchains/cc:__subpackages__",
        "@clang//:__subpackages__",
    ],
)

cc_bootstrap_binary(
    name = "wrapper",
    srcs = ["wrapper.cc"],
    visibility = ["@clang//:__subpackages__"],
)
