load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

py_runtime(
    name = "linux_x86_python3",
    files = ["@python//:linux_x86_files"],
    interpreter = "@python//:linux_x86_interpreter",
    python_version = "PY3",
)

py_runtime_pair(
    name = "linux_x86_py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":linux_x86_python3",
)

toolchain(
    name = "linux_x86_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_x86_py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "windows_x86_python3",
    files = ["@python//:windows_x86_files"],
    interpreter = "@python//:windows_x86_interpreter",
    python_version = "PY3",
)

py_runtime_pair(
    name = "windows_x86_py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":windows_x86_python3",
)

toolchain(
    name = "windows_x86_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = ":windows_x86_py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "mac_all_python3",
    files = ["@python//:mac_all_files"],
    interpreter = "@python//:mac_all_interpreter",
    python_version = "PY3",
)

py_runtime_pair(
    name = "mac_all_py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":mac_all_python3",
)

toolchain(
    name = "mac_all_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
    ],
    toolchain = ":mac_all_py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
    visibility = ["//visibility:public"],
)
