load(
    "@//build/bazel/toolchains/cc:rules.bzl",
    "cc_artifact_name",
    "cc_toolchain_config",
    "cc_toolchain_dynamic_runtime",
    "cc_toolchain_static_runtime",
)
load(":features.bzl", "cc_features")

package(default_visibility = ["//visibility:public"])

_imports = [
    "@macos_sdk//:libcxx",
    "@clang_mac_all//:compiler_rt",
    "@macos_sdk//:frameworks",
]

cc_features(
    name = "x64_features",
    cc_only_link_flags = [
        "-undefined dynamic_lookup",
        "-fobjc-link-runtime",
        "-lc++",
        "-lc++abi",
    ],
    compile_flags = [
        "--target=x86_64-apple-darwin-macho",
        "-mmacos-version-min=10.15",
        "-no-canonical-prefixes",
        "-Wno-builtin-macro-redefined",
        "-D__DATE__=\"redacted\"",
        "-D__TIMESTAMP__=\"redacted\"",
        "-D__TIME__=\"redacted\"",
        "-Wall",
        "-Wthread-safety",
        "-Werror=unguarded-availability-new",  # API not available in the targetd OS version.
        "-fstack-protector-strong",
        "-fcolor-diagnostics",
    ] + select({
        "@//build/bazel/toolchains/cc:is_bootstrap": [],
        "//conditions:default": ["-fdebug-prefix-map={BAZEL_EXECUTION_ROOT}=."],
    }),
    cxx_flags = ["-std=c++17"],
    link_flags = [
        "--target=x86_64-apple-darwin-macho",
        "-mmacos-version-min=10.15",
        "-fuse-ld=lld",
        "-rtlib=compiler-rt",
    ] + select({
        "@//build/bazel/toolchains/cc:is_bootstrap": [],
        "//conditions:default": ["-Wl,-oso_prefix,{BAZEL_EXECUTION_ROOT}/"],
    }),
    toolchain_imports = _imports,
)

cc_artifact_name(
    name = "dylib",
    category = "dynamic_library",
    extension = ".dylib",
    prefix = "lib",
)

cc_toolchain_config(
    name = "x64_config",
    artifact_name_patterns = [":dylib"],
    cc_features = ":x64_features",
    cc_tools = [
        "@clang_mac_all//:clang",
        "@clang_mac_all//:clang++",
        "@clang_mac_all//:archiver",
        "@clang_mac_all//:strip",
    ],
    compiler_name = "clang",
    identifier = "macos_clang_x64",
    sysroot = "@macos_sdk//:sdk",
    target_cpu = "k8",
    toolchain_imports = _imports,
)

cc_toolchain_dynamic_runtime(
    name = "dynamic_runtime",
    libs = _imports,
)

cc_toolchain_static_runtime(
    name = "static_runtime",
    libs = _imports,
)

cc_toolchain(
    name = "x64",
    all_files = ":x64_config",
    ar_files = "@clang_mac_all//:archiver",
    as_files = "@clang_mac_all//:clang",
    compiler_files = ":x64_config",
    dwp_files = "@//build/bazel/toolchains/cc:empty",
    dynamic_runtime_lib = ":dynamic_runtime",
    linker_files = ":x64_config",
    objcopy_files = "@//build/bazel/toolchains/cc:empty",
    static_runtime_lib = ":static_runtime",
    strip_files = "@clang_mac_all//:strip",
    supports_param_files = 1,
    toolchain_config = ":x64_config",
)

toolchain(
    name = "x64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@bazel_tools//tools/cpp:clang",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    toolchain = ":x64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_features(
    name = "arm64_features",
    cc_only_link_flags = [
        "-undefined dynamic_lookup",
        "-fobjc-link-runtime",
        "-lc++",
        "-lc++abi",
    ],
    compile_flags = [
        "--target=arm64-apple-darwin-macho",
        "-mmacos-version-min=11",
        "-no-canonical-prefixes",
        "-Wno-builtin-macro-redefined",
        "-D__DATE__=\"redacted\"",
        "-D__TIMESTAMP__=\"redacted\"",
        "-D__TIME__=\"redacted\"",
        "-Wall",
        "-Wthread-safety",
        "-Werror=unguarded-availability-new",  # API not available in the targetd OS version.
        "-fstack-protector-strong",
        "-fcolor-diagnostics",
    ] + select({
        "@//build/bazel/toolchains/cc:is_bootstrap": [],
        "//conditions:default": ["-fdebug-prefix-map={BAZEL_EXECUTION_ROOT}=."],
    }),
    cxx_flags = ["-std=c++17"],
    link_flags = [
        "--target=arm64-apple-darwin-macho",
        "-mmacos-version-min=11",
        "-fuse-ld=lld",
    ] + select({
        "@//build/bazel/toolchains/cc:is_bootstrap": [],
        "//conditions:default": ["-Wl,-oso_prefix,{BAZEL_EXECUTION_ROOT}/"],
    }),
    toolchain_imports = _imports,
)

cc_toolchain_config(
    name = "arm64_config",
    artifact_name_patterns = [":dylib"],
    cc_features = ":arm64_features",
    cc_tools = [
        "@clang_mac_all//:clang",
        "@clang_mac_all//:clang++",
        "@clang_mac_all//:archiver",
        "@clang_mac_all//:strip",
    ],
    compiler_name = "clang",
    identifier = "macos_clang_arm64",
    sysroot = "@macos_sdk//:sdk",
    target_cpu = "arm64",
    toolchain_imports = _imports,
)

cc_toolchain(
    name = "arm64",
    all_files = ":arm64_config",
    ar_files = "@clang_mac_all//:archiver",
    as_files = "@clang_mac_all//:clang",
    compiler_files = ":arm64_config",
    dwp_files = "@//build/bazel/toolchains/cc:empty",
    dynamic_runtime_lib = ":dynamic_runtime",
    linker_files = ":arm64_config",
    objcopy_files = "@//build/bazel/toolchains/cc:empty",
    static_runtime_lib = ":static_runtime",
    strip_files = "@clang_mac_all//:strip",
    supports_param_files = 1,
    toolchain_config = ":arm64_config",
)

toolchain(
    name = "arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@bazel_tools//tools/cpp:clang",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:macos",
    ],
    toolchain = ":arm64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
